# python_utils_collection

./: .gitignore  .gitmodules  LICENSE.md  README.md  pyproject.toml
utils/: common.py
utils/file/: batch_rename.py  find_duplicates.py  safe_delete.py  tree_size.py
utils/security/: checksum.py  gen_password.py  secret_scan.py
utils/text/: extract.py  patterns.py
